# ml_ean_2024_proyectofinal

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
Cuadernos/: Grupo_4_Prueba_Final_del_Proyecto_Predicción_de_Obesidad_a_partir_de_Hábitos_de_Vida.ipynb
