[tool.poetry]
name = "proyectofinal"
version = "0.1.0"
description = "Proyecto final ML"
authors = ["Jose <josedavid.09@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
numpy = "^1.22"
seaborn = "^0.13.2"
xgboost = "^2.1.2"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
